--- a/app/src/App.css
+++ b/app/src/App.css
@@ -50,7 +50,7 @@
   font-size: 18px;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   width: 100%;
   padding: 1vh 0;
   color: black;
@@ -152,12 +152,15 @@ a {
   position: relative;
 }
 
+/* List*/
+
 .itemContents {
   background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10vh 20vh;
+  width: 100vw;
 }
 
 .itemContents>.itemTitle {
@@ -173,25 +176,34 @@ a {
   font-weight: bold;
 }
 
-.itemLists {
-  width: 100%;
+
+.indexItem {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-}
-
-
-ul {
+  width: 100%;
+  margin: 0 auto;
   list-style: none;
 }
 
-/* List*/
+img {
+  width: 100%;
+}
+
+li {
+  margin: 0 30px 0;
+  list-style: none;
+}
+
+p {
+  text-align: left;
+  font-size: 15px;
+}
 
 
 /* footer */
 
 .footer {
-  width: 100%;
+  width: 100vw;
   padding: 5vh 0;
   color: #fff;
   background-color: #272727;
